# mcp-durable-tasks

./: DESIGN.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
bench/: RESULTS.md  benchmark.py  correctness.py
scripts/: demo.py  demo.tape
src/mcp_durable_tasks/: __init__.py  errors.py  memory.py  postgres.py  protocol.py  reaper.py  schema.sql  store.py  task.py  worker.py
tests/: conftest.py  test_concurrency.py  test_crash_recovery.py  test_memory_store.py  test_protocol.py  test_reaper.py  test_state_machine.py  test_store_contract.py
