[project]
name = "mcp-durable-tasks"
version = "0.1.0"
description = "A crash-durable, spec-conformant task store for the MCP Tasks extension (SEP-2663) — the persistent store the reference SDKs leave to implementers."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "testcontainers[postgres]>=4.0", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_durable_tasks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
packages = ["mcp_durable_tasks"]
warn_unused_ignores = true
warn_redundant_casts = true
